site/static/style.css: fixed header alignment issues

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -286,6 +286,7 @@ input[type=month] {
     #general-menu {
         position: absolute;
         right: 0;
+        top: 3rem;
         border-radius: 0 0 0.25rem 0.25rem;
         border-width: 0 1px 1px;
         border-style: solid;
@@ -298,10 +299,8 @@ input[type=month] {
         flex-direction: column;
         margin: 0 0 0 auto;
     }
-    #general-menu .nav-item:first-child .nav-link {
-        border-bottom-left-radius: 0.25rem;
-    }
     #general-menu .nav-item:last-child .nav-link {
+        border-bottom-left-radius: 0.25rem;
         border-bottom-right-radius: 0.25rem;
     }
     #general-menu .nav-link .glyphicons {
